@@ -24,6 +24,7 @@ import org.assertj.core.api.Condition;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.http.HttpMethod;
@@ -44,82 +45,75 @@ import pt.ulisboa.ewp.node.service.ewp.iia.hash.v7.IiaHashServiceV7;
 import pt.ulisboa.ewp.node.utils.http.HttpParams;
 import pt.ulisboa.ewp.node.utils.xml.XmlUtils;
 
-@TestPropertySource(
-    properties = {
-      "stats.portal.heiId=test123",
-    })
-class EwpApiInterInstitutionalAgreementsV7ControllerTest
-    extends AbstractEwpControllerIntegrationTest {
+@TestPropertySource(properties = {
+    "stats.portal.heiId=test123",
+})
+class EwpApiInterInstitutionalAgreementsV7ControllerTest extends
+    AbstractEwpControllerIntegrationTest {
 
-  @Autowired private HostPluginManager hostPluginManager;
+  @Autowired
+  private HostPluginManager hostPluginManager;
 
-  @Autowired private RegistryClient registryClient;
+  @Autowired
+  private RegistryClient registryClient;
 
-  @SpyBean private EwpInterInstitutionalAgreementMappingRepository mappingRepository;
+  @SpyBean
+  private EwpInterInstitutionalAgreementMappingRepository mappingRepository;
 
-  @Autowired private IiaHashServiceV7 iiaHashService;
+  @Autowired
+  private IiaHashServiceV7 iiaHashService;
 
   @ParameterizedTest
-  @EnumSource(
-      value = HttpMethod.class,
-      names = {"GET", "POST"})
+  @EnumSource(value = HttpMethod.class, names = {"GET", "POST"})
   public void testInterInstitutionalAgreementsIndexRetrieval_UnknownHeiId_ErrorReturned(
       HttpMethod method) throws Exception {
     String heiId = "test";
 
-    doReturn(false)
-        .when(hostPluginManager)
+    Mockito.reset(hostPluginManager);
+
+    doReturn(false).when(hostPluginManager)
         .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
 
-    assertBadRequest(
-        registryClient,
-        method,
-        EwpApiConstants.API_BASE_URI
-            + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
+    assertBadRequest(registryClient, method,
+        EwpApiConstants.API_BASE_URI + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
             + "/index",
         queryParams,
         "Unknown HEI ID: " + heiId);
   }
 
   @ParameterizedTest
-  @EnumSource(
-      value = HttpMethod.class,
-      names = {"GET", "POST"})
-  public void
-      testInterInstitutionalAgreementsIndexRetrieval_ValidHeiIdDividedIntoTwoHosts_AllIiaIdsReturned(
-          HttpMethod method) throws Exception {
+  @EnumSource(value = HttpMethod.class, names = {"GET", "POST"})
+  public void testInterInstitutionalAgreementsIndexRetrieval_ValidHeiIdDividedIntoTwoHosts_AllIiaIdsReturned(
+      HttpMethod method) throws Exception {
     String heiId = "test";
     List<String> iiaIds = Arrays.asList("a1", "b2", "c3");
 
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
-        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 =
-        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 0);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 0);
 
     mockProvider1.registerIiaIds(heiId, List.of(iiaIds.get(0)));
     mockProvider2.registerIiaIds(heiId, List.of(iiaIds.get(1), iiaIds.get(2)));
 
-    doReturn(true)
-        .when(hostPluginManager)
+    Mockito.reset(hostPluginManager);
+
+    doReturn(true).when(hostPluginManager)
         .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Arrays.asList(mockProvider1, mockProvider2))
-        .when(hostPluginManager)
+    doReturn(Arrays.asList(mockProvider1, mockProvider2)).when(hostPluginManager)
         .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
 
     String responseXml =
-        executeRequest(
-                registryClient,
-                method,
-                EwpApiConstants.API_BASE_URI
-                    + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
-                    + "/index",
-                queryParams)
+        executeRequest(registryClient, method,
+            EwpApiConstants.API_BASE_URI + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
+                + "/index",
+            queryParams)
             .andExpect(status().isOk())
             .andReturn()
             .getResponse()
@@ -134,12 +128,9 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
   }
 
   @ParameterizedTest
-  @EnumSource(
-      value = HttpMethod.class,
-      names = {"GET", "POST"})
-  public void
-      testInterInstitutionalAgreementsGetRetrievalByIiaIds_ValidHeiIdDividedIntoTwoHostsWithExistingMappings_AllIiasReturned(
-          HttpMethod method) throws Exception {
+  @EnumSource(value = HttpMethod.class, names = {"GET", "POST"})
+  public void testInterInstitutionalAgreementsGetRetrievalByIiaIds_ValidHeiIdDividedIntoTwoHostsWithExistingMappings_AllIiasReturned(
+      HttpMethod method) throws Exception {
     String heiId = "test";
     List<String> iiaIds = Arrays.asList("a1", "b2", "c3");
     List<String> ounitIds = Arrays.asList("o1", "o2", "o3");
@@ -154,75 +145,66 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
         iia.getPartner().add(partner);
       }
       CooperationConditions cooperationConditions = new CooperationConditions();
-      StudentStudiesMobilitySpecV7 studentStudiesMobilitySpec = new StudentStudiesMobilitySpecV7();
-      studentStudiesMobilitySpec.setSendingHeiId(UUID.randomUUID().toString());
-      studentStudiesMobilitySpec.setReceivingHeiId(UUID.randomUUID().toString());
-      studentStudiesMobilitySpec.setReceivingOunitId(ounitIds.get(index));
-      studentStudiesMobilitySpec.setReceivingFirstAcademicYearId("2021/2022");
-      studentStudiesMobilitySpec.setReceivingLastAcademicYearId("2021/2022");
-      studentStudiesMobilitySpec.setTotalMonthsPerYear(BigDecimal.TEN);
+      StudentStudiesMobilitySpecV7 studentStudiesMobilitySpecV7 = new StudentStudiesMobilitySpecV7();
+      studentStudiesMobilitySpecV7.setSendingHeiId(UUID.randomUUID().toString());
+      studentStudiesMobilitySpecV7.setReceivingHeiId(UUID.randomUUID().toString());
+      studentStudiesMobilitySpecV7.setReceivingOunitId(ounitIds.get(index));
+      studentStudiesMobilitySpecV7.setReceivingLastAcademicYearId("2021/2022");
+      studentStudiesMobilitySpecV7.setTotalMonthsPerYear(BigDecimal.TEN);
       ContactV1 receivingContact = new ContactV1();
       StringWithOptionalLangV1 stringWithOptionalLangV1 = new StringWithOptionalLangV1();
       stringWithOptionalLangV1.setValue("TEST");
       receivingContact.getContactName().add(stringWithOptionalLangV1);
-      studentStudiesMobilitySpec.getReceivingContact().add(receivingContact);
-      cooperationConditions.getStudentStudiesMobilitySpec().add(studentStudiesMobilitySpec);
+      studentStudiesMobilitySpecV7.getReceivingContact().add(receivingContact);
+      cooperationConditions.getStudentStudiesMobilitySpec().add(studentStudiesMobilitySpecV7);
       iia.setCooperationConditions(cooperationConditions);
       iias.add(iia);
     }
 
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
-        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 =
-        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 0);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 0);
 
     mockProvider1.registerIia(heiId, iiaIds.get(0), UUID.randomUUID().toString(), iias.get(0));
 
     mockProvider2.registerIia(heiId, iiaIds.get(1), UUID.randomUUID().toString(), iias.get(1));
     mockProvider2.registerIia(heiId, iiaIds.get(2), UUID.randomUUID().toString(), iias.get(2));
 
+    Mockito.reset(hostPluginManager);
+
     for (int index = 0; index < iiaIds.size(); index++) {
-      doReturn(
-              Optional.of(
-                  EwpInterInstitutionalAgreementMapping.create(
-                      heiId, ounitIds.get(index), iiaIds.get(index), UUID.randomUUID().toString())))
-          .when(mappingRepository)
+      doReturn(Optional.of(
+          EwpInterInstitutionalAgreementMapping.create(heiId, ounitIds.get(index),
+              iiaIds.get(index), UUID.randomUUID().toString()))).when(mappingRepository)
           .findByHeiIdAndIiaId(heiId, iiaIds.get(index));
     }
 
-    doReturn(true)
-        .when(hostPluginManager)
+    doReturn(true).when(hostPluginManager)
         .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
-    doReturn(Arrays.asList(mockProvider1, mockProvider2))
-        .when(hostPluginManager)
+    doReturn(Arrays.asList(mockProvider1, mockProvider2)).when(hostPluginManager)
         .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
-    doReturn(Optional.ofNullable(mockProvider1))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(0), InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Optional.ofNullable(mockProvider2))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(1), InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Optional.ofNullable(mockProvider2))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(2), InterInstitutionalAgreementsV7HostProvider.class);
+    doReturn(Optional.ofNullable(mockProvider1)).when(hostPluginManager)
+        .getSingleProvider(heiId, ounitIds.get(0),
+            InterInstitutionalAgreementsV7HostProvider.class);
+    doReturn(Optional.ofNullable(mockProvider2)).when(hostPluginManager)
+        .getSingleProvider(heiId, ounitIds.get(1),
+            InterInstitutionalAgreementsV7HostProvider.class);
+    doReturn(Optional.ofNullable(mockProvider2)).when(hostPluginManager)
+        .getSingleProvider(heiId, ounitIds.get(2),
+            InterInstitutionalAgreementsV7HostProvider.class);
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
     queryParams.param(EwpApiParamConstants.IIA_ID, iiaIds);
 
     String responseXml =
-        executeRequest(
-                registryClient,
-                method,
-                EwpApiConstants.API_BASE_URI
-                    + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
-                    + "/get",
-                queryParams)
+        executeRequest(registryClient, method,
+            EwpApiConstants.API_BASE_URI + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
+                + "/get",
+            queryParams)
             .andExpect(status().isOk())
             .andReturn()
             .getResponse()
@@ -232,18 +214,16 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
     assertThat(response).isNotNull();
     assertThat(response.getIia()).hasSize(iiaIds.size());
     for (Iia iia : response.getIia()) {
-      assertThat(iia.getIiaHash())
-          .isEqualTo(this.iiaHashService.calculateIiaHashes(List.of(iia)).get(0).getHash());
+      assertThat(iia.getIiaHash()).isEqualTo(
+          this.iiaHashService.calculateIiaHashes(List.of(iia)).get(0)
+              .getHash());
     }
   }
 
   @ParameterizedTest
-  @EnumSource(
-      value = HttpMethod.class,
-      names = {"GET", "POST"})
-  public void
-      testInterInstitutionalAgreementsGetRetrievalByIiaIds_ValidHeiIdDividedIntoTwoHostsWithAllButOneExistingMappings_AllKnownIiasReturned(
-          HttpMethod method) throws Exception {
+  @EnumSource(value = HttpMethod.class, names = {"GET", "POST"})
+  public void testInterInstitutionalAgreementsGetRetrievalByIiaIds_ValidHeiIdDividedIntoTwoHostsWithAllButOneExistingMappings_AllKnownIiasReturned(
+      HttpMethod method) throws Exception {
     String heiId = "test";
     List<String> iiaIds = Arrays.asList("a1", "b2", "c3");
     List<String> knownIiaIds = Arrays.asList("a1", "b2");
@@ -253,7 +233,73 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
 
     Iia iia2 = new Iia();
 
-    List<Iia> iias = List.of(iia1, iia2);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 0);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 0);
+
+    mockProvider1.registerIia(heiId, iiaIds.get(0), UUID.randomUUID().toString(), iia1);
+
+    mockProvider2.registerIia(heiId, iiaIds.get(1), UUID.randomUUID().toString(), iia2);
+
+    Mockito.reset(hostPluginManager);
+
+    for (int index = 0; index < knownIiaIds.size(); index++) {
+      doReturn(Optional.of(
+          EwpInterInstitutionalAgreementMapping.create(heiId, ounitIds.get(index),
+              knownIiaIds.get(index), UUID.randomUUID().toString()))).when(mappingRepository)
+          .findByHeiIdAndIiaId(heiId, knownIiaIds.get(index));
+    }
+
+    doReturn(true).when(hostPluginManager)
+        .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
+
+    doReturn(Arrays.asList(mockProvider1, mockProvider2)).when(hostPluginManager)
+        .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
+
+    doReturn(Optional.ofNullable(mockProvider1)).when(hostPluginManager)
+        .getSingleProvider(heiId, ounitIds.get(0),
+            InterInstitutionalAgreementsV7HostProvider.class);
+    doReturn(Optional.ofNullable(mockProvider2)).when(hostPluginManager)
+        .getSingleProvider(heiId, ounitIds.get(1),
+            InterInstitutionalAgreementsV7HostProvider.class);
+
+    HttpParams queryParams = new HttpParams();
+    queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
+    queryParams.param(EwpApiParamConstants.IIA_ID, iiaIds);
+
+    String responseXml =
+        executeRequest(registryClient, method,
+            EwpApiConstants.API_BASE_URI + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
+                + "/get",
+            queryParams)
+            .andExpect(status().isOk())
+            .andReturn()
+            .getResponse()
+            .getContentAsString();
+    IiasGetResponseV7 response = XmlUtils.unmarshall(responseXml, IiasGetResponseV7.class);
+
+    assertThat(response).isNotNull();
+    assertThat(response.getIia()).hasSize(knownIiaIds.size());
+    for (Iia iia : response.getIia()) {
+      assertThat(iia.getIiaHash()).isEqualTo(
+          this.iiaHashService.calculateIiaHashes(List.of(iia)).get(0)
+              .getHash());
+    }
+  }
+
+  @ParameterizedTest
+  @EnumSource(
+      value = HttpMethod.class,
+      names = {"GET", "POST"})
+  public void
+      testInterInstitutionalAgreementsGetRetrievalByIiaId_ValidHeiIdDividedIntoTwoHostsWithNoExistingMappingsButPrimaryProviderHasIia_IiaReturned(
+          HttpMethod method) throws Exception {
+    String heiId = "test";
+    List<String> iiaIds = List.of("a1");
+    List<String> knownIiaIds = List.of("a1");
+
+    Iia iia1 = new Iia();
 
     MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
         new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
@@ -262,36 +308,15 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
 
     mockProvider1.registerIia(heiId, iiaIds.get(0), UUID.randomUUID().toString(), iia1);
 
-    mockProvider2.registerIia(heiId, iiaIds.get(1), UUID.randomUUID().toString(), iia2);
+    Mockito.reset(hostPluginManager);
 
-    for (int index = 0; index < knownIiaIds.size(); index++) {
-      doReturn(
-              Optional.of(
-                  EwpInterInstitutionalAgreementMapping.create(
-                      heiId,
-                      ounitIds.get(index),
-                      knownIiaIds.get(index),
-                      UUID.randomUUID().toString())))
-          .when(mappingRepository)
-          .findByHeiIdAndIiaId(heiId, knownIiaIds.get(index));
-    }
-
-    doReturn(true)
-        .when(hostPluginManager)
-        .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
-
-    doReturn(Arrays.asList(mockProvider1, mockProvider2))
+    doReturn(List.of(mockProvider1, mockProvider2))
         .when(hostPluginManager)
         .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
-    doReturn(Optional.ofNullable(mockProvider1))
+    doReturn(Optional.of(mockProvider1))
         .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(0), InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Optional.ofNullable(mockProvider2))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(1), InterInstitutionalAgreementsV7HostProvider.class);
+        .getPrimaryProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
@@ -315,7 +340,11 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
     assertThat(response.getIia()).hasSize(knownIiaIds.size());
     for (Iia iia : response.getIia()) {
       assertThat(iia.getIiaHash())
-          .isEqualTo(this.iiaHashService.calculateIiaHashes(List.of(iia)).get(0).getHash());
+          .isEqualTo(
+              this.iiaHashService
+                  .calculateIiaHashes(List.of(iia))
+                  .get(0)
+                  .getHash());
     }
   }
 
@@ -324,66 +353,34 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
       value = HttpMethod.class,
       names = {"GET", "POST"})
   public void
-      testInterInstitutionalAgreementsGetRetrievalByIiaCodes_ValidHeiIdDividedIntoTwoHostsWithExistingMappings_AllIiasReturned(
+      testInterInstitutionalAgreementsGetRetrievalByIiaId_ValidHeiIdDividedIntoTwoHostsWithNoExistingMappingsButNonPrimaryProviderHasIia_IiaReturned(
           HttpMethod method) throws Exception {
     String heiId = "test";
-    List<String> iiaCodes = Arrays.asList("a1", "b2", "c3");
-    List<String> ounitIds = Arrays.asList("o1", "o2", "o3");
+    List<String> iiaIds = List.of("a1");
+    List<String> knownIiaIds = List.of("a1");
 
     Iia iia1 = new Iia();
 
-    Iia iia2 = new Iia();
-
-    Iia iia3 = new Iia();
-
-    List<Iia> iias = List.of(iia1, iia2, iia3);
-
     MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
-        new MockInterInstitutionalAgreementsV7HostProvider(0, 3);
+        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
     MockInterInstitutionalAgreementsV7HostProvider mockProvider2 =
-        new MockInterInstitutionalAgreementsV7HostProvider(0, 3);
+        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
 
-    mockProvider1.registerIia(heiId, UUID.randomUUID().toString(), iiaCodes.get(0), iia1);
+    mockProvider2.registerIia(heiId, iiaIds.get(0), UUID.randomUUID().toString(), iia1);
 
-    mockProvider2.registerIia(heiId, UUID.randomUUID().toString(), iiaCodes.get(1), iia2);
-    mockProvider2.registerIia(heiId, UUID.randomUUID().toString(), iiaCodes.get(2), iia3);
+    Mockito.reset(hostPluginManager);
 
-    for (int index = 0; index < iiaCodes.size(); index++) {
-      doReturn(
-              Optional.of(
-                  EwpInterInstitutionalAgreementMapping.create(
-                      heiId,
-                      ounitIds.get(index),
-                      UUID.randomUUID().toString(),
-                      iiaCodes.get(index))))
-          .when(mappingRepository)
-          .findByHeiIdAndIiaCode(heiId, iiaCodes.get(index));
-    }
-
-    doReturn(true)
-        .when(hostPluginManager)
-        .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
-
-    doReturn(Arrays.asList(mockProvider1, mockProvider2))
+    doReturn(List.of(mockProvider1, mockProvider2))
         .when(hostPluginManager)
         .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
-    doReturn(Optional.ofNullable(mockProvider1))
+    doReturn(Optional.of(mockProvider1))
         .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(0), InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Optional.ofNullable(mockProvider2))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(1), InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Optional.ofNullable(mockProvider2))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(2), InterInstitutionalAgreementsV7HostProvider.class);
+        .getPrimaryProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
-    queryParams.param(EwpApiParamConstants.IIA_CODE, iiaCodes);
+    queryParams.param(EwpApiParamConstants.IIA_ID, iiaIds);
 
     String responseXml =
         executeRequest(
@@ -400,89 +397,7 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
     IiasGetResponseV7 response = XmlUtils.unmarshall(responseXml, IiasGetResponseV7.class);
 
     assertThat(response).isNotNull();
-    assertThat(response.getIia()).hasSize(iiaCodes.size());
-    for (Iia iia : response.getIia()) {
-      assertThat(iia.getIiaHash())
-          .isEqualTo(this.iiaHashService.calculateIiaHashes(List.of(iia)).get(0).getHash());
-    }
-  }
-
-  @ParameterizedTest
-  @EnumSource(
-      value = HttpMethod.class,
-      names = {"GET", "POST"})
-  public void
-      testInterInstitutionalAgreementsGetRetrievalByIiaCodes_ValidHeiIdDividedIntoTwoHostsWithAllButOneExistingMappings_AllKnownIiasReturned(
-          HttpMethod method) throws Exception {
-    String heiId = "test";
-    List<String> iiaCodes = Arrays.asList("a1", "b2", "c3");
-    List<String> knownIiaCodes = Arrays.asList("a1", "b2");
-    List<String> ounitIds = Arrays.asList("o1", "o2");
-
-    Iia iia1 = new Iia();
-
-    Iia iia2 = new Iia();
-
-    List<Iia> iias = List.of(iia1, iia2);
-
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
-        new MockInterInstitutionalAgreementsV7HostProvider(0, 3);
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 =
-        new MockInterInstitutionalAgreementsV7HostProvider(0, 3);
-
-    mockProvider1.registerIia(heiId, UUID.randomUUID().toString(), iiaCodes.get(0), iia1);
-
-    mockProvider2.registerIia(heiId, UUID.randomUUID().toString(), iiaCodes.get(1), iia2);
-
-    for (int index = 0; index < knownIiaCodes.size(); index++) {
-      doReturn(
-              Optional.of(
-                  EwpInterInstitutionalAgreementMapping.create(
-                      heiId,
-                      ounitIds.get(index),
-                      UUID.randomUUID().toString(),
-                      knownIiaCodes.get(index))))
-          .when(mappingRepository)
-          .findByHeiIdAndIiaCode(heiId, knownIiaCodes.get(index));
-    }
-
-    doReturn(true)
-        .when(hostPluginManager)
-        .hasHostProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
-
-    doReturn(Arrays.asList(mockProvider1, mockProvider2))
-        .when(hostPluginManager)
-        .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
-
-    doReturn(Optional.ofNullable(mockProvider1))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(0), InterInstitutionalAgreementsV7HostProvider.class);
-    doReturn(Optional.ofNullable(mockProvider2))
-        .when(hostPluginManager)
-        .getSingleProvider(
-            heiId, ounitIds.get(1), InterInstitutionalAgreementsV7HostProvider.class);
-
-    HttpParams queryParams = new HttpParams();
-    queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
-    queryParams.param(EwpApiParamConstants.IIA_CODE, iiaCodes);
-
-    String responseXml =
-        executeRequest(
-                registryClient,
-                method,
-                EwpApiConstants.API_BASE_URI
-                    + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
-                    + "/get",
-                queryParams)
-            .andExpect(status().isOk())
-            .andReturn()
-            .getResponse()
-            .getContentAsString();
-    IiasGetResponseV7 response = XmlUtils.unmarshall(responseXml, IiasGetResponseV7.class);
-
-    assertThat(response).isNotNull();
-    assertThat(response.getIia()).hasSize(knownIiaCodes.size());
+    assertThat(response.getIia()).hasSize(knownIiaIds.size());
     for (Iia iia : response.getIia()) {
       assertThat(iia.getIiaHash())
           .isEqualTo(
@@ -493,25 +408,67 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
     }
   }
 
+  @ParameterizedTest
+  @EnumSource(
+      value = HttpMethod.class,
+      names = {"GET", "POST"})
+  public void
+      testInterInstitutionalAgreementsGetRetrievalByIiaId_ValidHeiIdDividedIntoTwoHostsWithNoExistingMappingsAndNoProviderHasIia_NoIiaReturned(
+          HttpMethod method) throws Exception {
+    String heiId = "test";
+    List<String> iiaIds = List.of("a1");
+
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
+        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 =
+        new MockInterInstitutionalAgreementsV7HostProvider(3, 0);
+
+    Mockito.reset(hostPluginManager);
+
+    doReturn(List.of(mockProvider1, mockProvider2))
+        .when(hostPluginManager)
+        .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
+
+    doReturn(Optional.of(mockProvider1))
+        .when(hostPluginManager)
+        .getPrimaryProvider(heiId, InterInstitutionalAgreementsV7HostProvider.class);
+
+    HttpParams queryParams = new HttpParams();
+    queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
+    queryParams.param(EwpApiParamConstants.IIA_ID, iiaIds);
+
+    String responseXml =
+        executeRequest(
+                registryClient,
+                method,
+                EwpApiConstants.API_BASE_URI
+                    + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
+                    + "/get",
+                queryParams)
+            .andExpect(status().isOk())
+            .andReturn()
+            .getResponse()
+            .getContentAsString();
+    IiasGetResponseV7 response = XmlUtils.unmarshall(responseXml, IiasGetResponseV7.class);
+
+    assertThat(response).isNotNull();
+    assertThat(response.getIia()).hasSize(0);
+  }
+
   @Test
-  public void testStatsRetrieval_InvalidHeiId_ErrorReturned() throws Exception {
+  public void testStatsRetrieval_InvalidHeiId_ErrorReturned()
+      throws Exception {
     String invalidHeiId = UUID.randomUUID().toString();
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, invalidHeiId);
 
-    assertErrorRequest(
-        registryClient,
-        HttpMethod.GET,
+    assertErrorRequest(registryClient, HttpMethod.GET,
         EwpApiConstants.API_BASE_URI
             + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
-            + "/stats",
-        queryParams,
-        HttpStatus.BAD_REQUEST,
-        new Condition<>(
-            errorResponse ->
-                errorResponse.getDeveloperMessage().getValue().contains("Unauthorized HEI ID"),
-            "unauthorized HEI ID"));
+            + "/stats", queryParams, HttpStatus.BAD_REQUEST,
+        new Condition<>(errorResponse -> errorResponse.getDeveloperMessage().getValue()
+            .contains("Unauthorized HEI ID"), "unauthorized HEI ID"));
   }
 
   @Test
@@ -519,8 +476,8 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
       throws Exception {
     String heiId = UUID.randomUUID().toString();
 
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 =
-        new MockInterInstitutionalAgreementsV7HostProvider(3, 3);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider1 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 3);
 
     IiasStatsResponseV7 stats1 = new IiasStatsResponseV7();
     stats1.setIiaFetchable(BigInteger.valueOf(1L));
@@ -530,8 +487,8 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
 
     mockProvider1.registerStats(heiId, stats1);
 
-    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 =
-        new MockInterInstitutionalAgreementsV7HostProvider(3, 3);
+    MockInterInstitutionalAgreementsV7HostProvider mockProvider2 = new MockInterInstitutionalAgreementsV7HostProvider(
+        3, 3);
 
     IiasStatsResponseV7 stats2 = new IiasStatsResponseV7();
     stats2.setIiaFetchable(BigInteger.valueOf(11L));
@@ -541,38 +498,37 @@ class EwpApiInterInstitutionalAgreementsV7ControllerTest
 
     mockProvider2.registerStats(heiId, stats2);
 
-    doReturn(Arrays.asList(mockProvider1, mockProvider2))
-        .when(hostPluginManager)
+    Mockito.reset(hostPluginManager);
+
+    doReturn(Arrays.asList(mockProvider1, mockProvider2)).when(hostPluginManager)
         .getAllProvidersOfType(heiId, InterInstitutionalAgreementsV7HostProvider.class);
 
     HttpParams queryParams = new HttpParams();
     queryParams.param(EwpApiParamConstants.HEI_ID, heiId);
 
-    MockHttpServletRequestBuilder requestBuilder =
-        MockMvcRequestBuilders.request(
-            HttpMethod.GET,
-            EwpApiConstants.API_BASE_URI
-                + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
-                + "/stats?"
-                + EwpApiParamConstants.HEI_ID
-                + "="
-                + heiId);
+    MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.request(HttpMethod.GET,
+        EwpApiConstants.API_BASE_URI
+            + EwpApiInterInstitutionalAgreementsV7Controller.BASE_PATH
+            + "/stats?" + EwpApiParamConstants.HEI_ID + "=" + heiId);
 
-    String responseXml =
-        executeRequest(
-                registryClient,
-                requestBuilder,
-                httpSignatureRequestProcessor(registryClient, List.of("test123")))
-            .andExpect(status().isOk())
-            .andReturn()
-            .getResponse()
-            .getContentAsString();
-    IiasStatsResponseV7 response = XmlUtils.unmarshall(responseXml, IiasStatsResponseV7.class);
+    String responseXml = executeRequest(registryClient, requestBuilder,
+        httpSignatureRequestProcessor(registryClient, List.of("test123")))
+        .andExpect(status().isOk())
+        .andReturn()
+        .getResponse()
+        .getContentAsString();
+    IiasStatsResponseV7 response = XmlUtils.unmarshall(responseXml,
+        IiasStatsResponseV7.class);
 
     assertThat(response).isNotNull();
-    assertThat(response.getIiaFetchable()).isEqualTo(BigInteger.valueOf(12L));
-    assertThat(response.getIiaLocalUnapprovedPartnerApproved()).isEqualTo(BigInteger.valueOf(14L));
-    assertThat(response.getIiaLocalApprovedPartnerUnapproved()).isEqualTo(BigInteger.valueOf(16L));
-    assertThat(response.getIiaBothApproved()).isEqualTo(BigInteger.valueOf(18L));
+    assertThat(response.getIiaFetchable()).isEqualTo(
+        BigInteger.valueOf(12L));
+    assertThat(response.getIiaLocalUnapprovedPartnerApproved()).isEqualTo(
+        BigInteger.valueOf(14L));
+    assertThat(response.getIiaLocalApprovedPartnerUnapproved()).isEqualTo(
+        BigInteger.valueOf(16L));
+    assertThat(response.getIiaBothApproved()).isEqualTo(
+        BigInteger.valueOf(18L));
   }
+
 }
